--- a/activator.properties
+++ b/activator.properties
@@ -1,4 +1,4 @@
-name=hello-scala-2_11
-title=Hello Scala 2.11!
-description=Scala is a general purpose programming language designed to express common programming patterns in a concise, elegant, and type-safe way.  This very simple Scala application will get you started building and testing standalone Scala apps.  This app uses Scala 2.11 and ScalaTest.
-tags=Basics,scala,starter
+name=hello-scala-js
+title=Hello Scala.js!
+description=Scala.js is a compiler from Scala to JavaScript, which allows you to develop your Web application entirely in Scala. This very simple Scala.js application will get you started.
+tags=Basics,scala-js,starter
